syntax = "proto3";

package page_generation;

service PageService {
  rpc GeneratePage (PageRequest) returns (PageGeneratingReply) {}
}

message PageRequest {
  string template = 1;
  map<string, string> values = 2;
}

message PageGeneratingReply {
  string generating = 1;
}